--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Made a voting poll for best picture
 ### Lighthouse Accessibility Report Score
 
 * Provide a screenshot of your score after running a Lighthouse Accessibility report.
+![](2023-02-07%20(2).png)
 
 ### Reflections and Comments
 
